EB-2001-12-12-0: Bugfix:    Changed/enhanced qmon's "Job Control" and "Job
                            Submission" dialog so that they respect unenrolled
                            pending tasks.
                 Issue:     None (Fix of Enhancem.: EB-2001-12-10-1)

JG-2001-12-12-0: Copyright: Create and link libXltree as shared lib; it is
                            LGPL Code.

EB-2001-12-11-0: Bugfix:    Printing of zombie jobs in qmon and qstat
                 Issue:     None (Fix of Enhancem.: EB-2001-12-10-1)

CR-2001-12-11-1: Testsuite: Start sgecommdcntl as root if root access is available

CR-2001-12-11-0: Testsuite: Using catch{} construct to suppress tcl errors when
                            creating a report message

JG-2001-12-11-0: Bugfix:    qrsh can not really ignore CTRL-Z (as intended by
                            JG-2001-12-10-0). Pressing CTRL-Z in a 
                            qrsh <command> session will suspend the rsh client.

EB-2001-12-10-1: Enhancem.: Memory optimization for zombie jobs

                            THE SPOOL FILE FORMAT FOR JOBS (CULL JOB STRUCTURE)
                            HAS BEEN CHANGED
                 
JG-2001-12-10-1: Testsuite: fixed qrsh test:
                            - accounting wrongly reported errors
                            - terminate test did no longer work for 
                              remote hosts

CR-2001-12-10-1: Feature:   remove unnecessary libs linked to commd

JG-2001-12-10-0: Bugfix:    qrsh/qlogin: if client command (rsh/rlogin/telnet)
                            exited abnormaly (signal, coredump etc.), the 
                            corresponding job will be deleted, assuring that 
                            no tasks keep running on the execution side.

CR-2001-12-10-0: Testsuite: using catch to prevent testsuite abort when a test 
                            produces a tcl error.

EB-2001-12-10-0: Bugfix:    Fix in sgeee scheduler where pending tickets 