@@ -1,3 +1,7 @@
+AA-2001-12-13-0: Feature:   added max_aj_instances and max_aj_tasks to global
+                            cluster config
+                            qmonMirrorMulti -> qmonMirrorMultiAnswer
+
 EB-2001-12-12-0: Bugfix:    Changed/enhanced qmon's "Job Control" and "Job
                             Submission" dialog so that they respect unenrolled
                             pending tasks.
